# src/node/model/lineString.ts
@@ -1,36 +1,0 @@
-/**
- * swagger
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-export class LineString {
-    'type'?: string;
-    'coordinates'?: Array<Array<number>>;
-
-    static discriminator: string | undefined = undefined;
-
-    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
-        {
-            "name": "type",
-            "baseName": "type",
-            "type": "string"
-        },
-        {
-            "name": "coordinates",
-            "baseName": "coordinates",
-            "type": "Array<Array<number>>"
-        }    ];
-
-    static getAttributeTypeMap() {
-        return LineString.attributeTypeMap;
-    }
-}
-
